[project]
name = "python-monorepo-no-src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ['ai-pipeline','ai-executor']

[tool.uv.sources]
ai-pipeline = { workspace = true }
ai-executor = { workspace = true }

[tool.uv.workspace]
members = ["packages/ai-pipeline", "packages/ai-executor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
